# DisinfoBotWatch

./: .gitignore  README.md  api.py  main.py  pyproject.toml  restart.sh  run.sh  run_analysis.sh  run_dashboard.sh
data/: dl_data.sh
konsta/: index.html  package-lock.json  package.json
konsta/src/: App.tsx  index.css
src/: analysis.py  init_spark.py  network_viz.py
static/: index.html
static/css/: style.css
static/js/: app.js
