[project]
name = "disinfobotwatch"
version = "0.1.0"
description = "Analysis of Russian troll tweets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.3.2",
    "flask",
    "flask-cors",
    "pandas",
    "numpy",
    "nltk",
    "pyvis",
    "matplotlib",
    "seaborn",
    "networkx",
    "scipy",
    "setuptools",
]
